@@ -1,3 +1,10 @@
+list-apt-installs (0.4) Linux Mint 18.x; urgency=medium
+
+  * Add argc/argv parsing. Implement --help and --version.
+  * Expanding on README.md
+
+-- Scott Caudle <zcotcaudle@gmail.com>  Sun, 17 Jun 2018 16:09:36 -0400
+
 list-apt-installs (0.3) Linux Mint 18.x; urgency=medium
 
   * New initial release.
